--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   filter:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
