--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -38,21 +38,21 @@ jobs:
       - name: Check for IFC changes
         id: check_results
         run: |
-          if cat ${{ steps.file_changes.outputs.files }} | grep -q .ifc; then 
+          if [[ $HOME/files.csv ]] && cat $HOME/files.csv | grep -q .ifc; then 
             echo ::set-output name=HASIFCS::true; 
             echo 'IFC changes determined!'
           else 
             echo ::set-output name=HASIFCS::false; 
             echo 'No IFC changes determined!'
           fi
-          if cat ${{ steps.file_changes.outputs.files_modified }} | grep -q .ifc; then 
+          if [[ $HOME/files_modified.csv ]] && cat $HOME/files_modified.csv | grep -q .ifc; then 
             echo ::set-output name=MODIFCS::true; 
             echo 'IFC modifications determined!'
           else 
             echo ::set-output name=MODIFCS::false; 
             echo 'No IFC modifications determined!'
           fi
-          if cat ${{ steps.file_changes.outputs.files_added }} | grep -q .ifc; then 
+          if [[ $HOME/files_added.csv ]] && cat $HOME/files_added.csv | grep -q .ifc; then 
             echo ::set-output name=ADDEDIFCS::true; 
             echo 'IFC additions determined!'
           else 
