--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -94,10 +94,10 @@ jobs:
         name: Download the file
         with:
           url: "https://bwsyncandshare.kit.edu/s/3morKMDHr6fciP5/download"
-          target: download/
+          target: checker.zip
       - name: Unzip the checker
         run: |
-          cmd /C ""C:/Program Files/7-Zip/7z" x -y -o"${{ github.workspace}}/download" "${{ steps.downloadfile.outputs.filename }}""
+          cmd /C ("C:/Program Files/7-Zip/7z" x -y -o"${{ github.workspace}}/download" "${{ steps.downloadfile.outputs.filename }}")
       - name: Logging location
         run: |
           dir download
