correct paths should be a given

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -97,7 +97,7 @@ jobs:
           target: checker.zip
       - name: Unzip the checker
         run: |
-          cmd /C (&"C:/Program Files/7-Zip/7z.exe" x -y -o"${{ github.workspace}}/checker" "${{ steps.downloadfile.outputs.filename }}")
+          cmd /C (&"C:/Program Files/7-Zip/7z.exe" x -y -o"${{ github.workspace}}/checker" "${{ github.workspace}}/${{ steps.downloadfile.outputs.filename }}")
       - name: Logging location
         run: |
           dir checker
