--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -94,7 +94,7 @@ jobs:
         name: Download the file
         with:
           url: "https://bwsyncandshare.kit.edu/s/3morKMDHr6fciP5/download"
-          target: checker.zip
+          target: download
       - name: Logging location
         run: |
           dir .
