--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -102,7 +102,8 @@ jobs:
       - name: Unzip the checker
         shell: powershell
         run: |
-          Expand-Archive -LiteralPath "${{ github.workspace}}/download/${{ steps.downloadfile.outputs.filename }}" -DestinationPath "${{ github.workspace}}/checker"
+          Rename-Item -Path "${{ github.workspace}}/download/${{ steps.downloadfile.outputs.filename }}" -NewName "${{ steps.downloadfile.outputs.filename }}.zip"
+          Expand-Archive -LiteralPath "${{ github.workspace}}/download/${{ steps.downloadfile.outputs.filename }}.zip" -DestinationPath "${{ github.workspace}}/checker"
       - name: Logging location
         run: |
           dir checker
